Update Contact Page CSS

--- a/style.css
+++ b/style.css
@@ -63,3 +63,25 @@ nav a.current {
   padding-bottom: 0.1em;
   font-weight: bold;
 }
+
+input,
+textarea,
+button {
+  font: inherit;
+}
+
+form {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 1em;
+}
+
+form label {
+  display: grid;
+  grid-template-columns: subgrid;
+  grid-column: 1 / -1;
+}
+
+form button {
+  grid-column: 1 / -1;
+}
