--- a/style.css
+++ b/style.css
@@ -193,3 +193,41 @@ h1, h2, h3, h4, h5, h6 {
   font-size: inherit;
   padding: 0.25em;
 }
+
+#profile-stats {
+  margin: 3em 0;
+  padding: 1em;
+  border: 2px solid var(--border-color);
+  border-radius: 12px;
+  text-align: center;
+}
+
+#profile-stats h2 {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  border-bottom: 2px solid var(--color-accent);
+  padding-bottom: 0.3em;
+  font-size: 1.5rem;
+}
+
+#profile-stats dl {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-align: center;
+  gap: 1.5em;
+}
+
+#profile-stats dt {
+  grid-row: 1;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 0.9rem;
+  margin-bottom: 0.5rem;
+}
+
+#profile-stats dd {
+  grid-row: 2;
+  font-size: 2rem;
+  font-weight: 500;
+  margin: 0;
+}
