Create a circle with SVG

--- a/style.css
+++ b/style.css
@@ -198,6 +198,13 @@ h1, h2, h3, h4, h5, h6 {
   text-wrap: balance;
 }
 
+#projects-pie-plot {
+  max-width: 20em;
+  margin-block: 2em;
+
+  overflow: visible;
+}
+
 /* ----------------------------LIGHT/DARK---------------------------- */
 .color-scheme {
   position: absolute;
