--- a/style.css
+++ b/style.css
@@ -375,3 +375,35 @@ path.selected {
   stroke-opacity: 0.1;
   stroke-width: 0.5;
 }
+
+dl.info {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 0.25em 1em;
+  margin: 0;
+}
+
+dl.info dt {
+  font-weight: 600;
+  color: var(--muted-color, #666);
+}
+
+dl.info dd {
+  margin: 0;
+}
+
+.tooltip {
+  position: fixed;
+  top: 1em;
+  left: 1em;
+}
+
+circle {
+  transition: 200ms;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+
+circle:hover {
+  transform: scale(1.5);
+}
