--- a/style.css
+++ b/style.css
@@ -384,6 +384,13 @@ dl.info {
   grid-template-columns: auto 1fr;
   gap: 0.25em 1em;
   margin: 0;
+  transition-duration: 500ms;
+  transition-property: opacity, visibility;
+}
+
+dl.info[hidden]:not(:hover, :focus-within) {
+  opacity: 0;
+  visibility: hidden;
 }
 
 dl.info dt {
@@ -391,9 +398,6 @@ dl.info dt {
   color: var(--muted-color, #666);
 }
 
-dl.info dd {
-  margin: 0;
-}
 
 .tooltip {
   position: fixed;
