--- a/style.css
+++ b/style.css
@@ -414,6 +414,10 @@ circle {
   transition: 200ms;
   transform-origin: center;
   transform-box: fill-box;
+
+  @starting-style {
+    r: 0;
+  }
 }
 
 circle:hover {
@@ -432,4 +436,9 @@ circle:hover {
   stroke-opacity: 0.7;
   stroke-dasharray: 5 3;
   animation: marching-ants 2s linear infinite;
+}
+
+#commit-progress {
+  width: 100%;
+  cursor: pointer;
 }
