Vary color of dots by technology

--- a/style.css
+++ b/style.css
@@ -473,6 +473,6 @@ circle:hover {
   display: flex;
   width: 0.5em;
   aspect-ratio: 1;
-  background: steelblue;
+  background: var(--color, steelblue);
   border-radius: 50%;
 }
